2007-05-03  Werner Koch  <wk@g10code.com>

	* Makefile.am (EXTRA_DIST): Do not build pkbench.c

2007-05-02  David Shaw  <dshaw@jabberwocky.com>

	* basic.c (check_ciphers): Add Camellia.

2007-04-30  David Shaw  <dshaw@jabberwocky.com>

	* basic.c (check_ciphers): #if out ciphers we don't have.  Add
	test for GCRY_CIPHER_RFC2268_40.

2007-04-30  Werner Koch  <wk@g10code.com>

	* version.c: New.
	* Makefile.am (TESTS): Add version.

2007-04-30  Marcus Brinkmann  <marcus@g10code.de>

	* benchmark.c (ecc_bench): Release KEY_SPEC.

2007-04-28  Marcus Brinkmann  <marcus@g10code.de>

	* ac-data.c (check_run): Don't give redundant GCRY_AC_FLAG_DEALLOC
	in addition to GCRY_AC_FLAG_COPY.  Don't release LABEL1 or MPI0,
	as those are donated to libgcrypt, but do release MPI0 and MPI2.

2007-04-12  Marcus Brinkmann  <marcus@g10code.de>

	* ac-schemes.c (scheme_spec): Revert last change.
	
	* ac-schemes.c (scheme_spec): Remove const qualifier from member M.
	(es_check): Remove const qualifier from C and M2.

2007-03-28  Werner Koch  <wk@g10code.com>

	* pkbench.c (generate_key): Support named curves.

	* benchmark.c (dsa_bench): New args ITERATIONS and PRINT_HEADER.
	(main): Call dsa and ecc benchs.
	(show_sexp): New.

	* Makefile.am (TESTS): Move pkbench to EXTRA_PROGRAMS.

2007-03-22  Werner Koch  <wk@g10code.com>

	* benchmark.c (die): New.
	(ecc_bench): New.

	* pkbench.c (main): Reworked to provide proper option handling.

2007-03-13  Werner Koch  <wk@g10code.com>

	* mpitests.c: Reformatted to GNU standards.
	(main): Add options --verbose and --debug for future use.

2007-03-13  Werner Dittmann <Werner.Dittmann@t-online.de>  (wk)

	* mpitests.c: New.

2007-02-23  Werner Koch  <wk@g10code.com>

	* Makefile.am (TEST): Run benchmark as last. 

	* ac-data.c (check_sexp_conversion): Print label only in verbose
	mode.

	* pubkey.c (main): Run test just 2 times instead of 10.
	(get_elg_key_new): New.
	(check_run): Also run tests with Elgamal keys.